@@ -597,3 +597,4 @@ verilog/parser_sv.v:274: ENDCELL  ''
 verilog/parser_sv.v:275: ENDMODULE  'endmodule'
 verilog/parser_sv.v:277: MODULE  'module' 'bugas' undef '0'
 verilog/parser_sv.v:281: ENDMODULE  'endmodule'
+verilog/parser_sv.v:283: VAR  'typedef' 'enum_ranged_t' 'netlist' '' '[2:0]' '' ''
